# 1b31

./: .gitignore  pyproject.toml  roles-proposal.md
api/: posts.py
db/models/: post.py  user.py
tests/my_tests/curl_tests/: get_posts_missing_authorIds.sh  get_posts_simple.sh  get_posts_unauthenticated.sh  get_token.sh  token.cred
tests/my_tests/pytests/: test_posts_GET.py  test_posts_PATCH.py  test_posts_mt.py
