[tool.poetry]
name = "1b31"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
flask = "2.1.1"
flask-sqlalchemy = "2.5.1"
python-dotenv = "0.20.0"
pyjwt = "2.3.0"
bcrypt = "3.2.0"
black = "22.3.0"

[tool.poetry.dev-dependencies]
pytest = "7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
